--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -8,7 +8,7 @@
     android:background="@color/white">
 
     <Button
-        android:id="@+id/btnSkipTestAct"
+        android:id="@+id/btnNextTestAct"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginBottom="10dp"
@@ -31,7 +31,7 @@
         android:layout_marginTop="60dp"
         android:orientation="vertical"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/btnSkipTestAct"
+        app:layout_constraintBottom_toTopOf="@+id/btnNextTestAct"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -163,7 +163,7 @@
         android:layout_marginTop="60dp"
         android:orientation="vertical"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/btnSkipTestAct"
+        app:layout_constraintBottom_toTopOf="@+id/btnNextTestAct"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -224,7 +224,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="60dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/btnSkipTestAct"
+        app:layout_constraintBottom_toTopOf="@+id/btnNextTestAct"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" android:orientation="vertical">
@@ -265,7 +265,7 @@
         android:layout_marginTop="100dp"
         android:orientation="vertical"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/btnSkipTestAct"
+        app:layout_constraintBottom_toTopOf="@+id/btnNextTestAct"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -307,40 +307,35 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/p90"
-                        android:textAlignment="viewStart" />
+                        android:text="@string/p90" />
 
                     <RadioButton
                         android:id="@+id/rb80"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/p80"
-                        android:textAlignment="viewStart" />
+                        android:text="@string/p80" />
 
                     <RadioButton
                         android:id="@+id/rb70"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/p70"
-                        android:textAlignment="viewStart" />
+                        android:text="@string/p70" />
 
                     <RadioButton
                         android:id="@+id/rb60"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/p60"
-                        android:textAlignment="viewStart" />
+                        android:text="@string/p60" />
 
                     <RadioButton
                         android:id="@+id/rb50"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/p50"
-                        android:textAlignment="viewStart" />
+                        android:text="@string/p50" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -354,32 +349,28 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/p40"
-                        android:textAlignment="viewStart" />
+                        android:text="@string/p40" />
 
                     <RadioButton
                         android:id="@+id/rb30"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/p30"
-                        android:textAlignment="viewStart" />
+                        android:text="@string/p30" />
 
                     <RadioButton
                         android:id="@+id/rb20"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/p20"
-                        android:textAlignment="viewStart" />
+                        android:text="@string/p20" />
 
                     <RadioButton
                         android:id="@+id/rb10"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/p10"
-                        android:textAlignment="viewStart" />
+                        android:text="@string/p10" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -397,7 +388,7 @@
         android:layout_marginTop="100dp"
         android:orientation="vertical"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/btnSkipTestAct"
+        app:layout_constraintBottom_toTopOf="@+id/btnNextTestAct"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -458,7 +449,7 @@
         android:layout_marginTop="180dp"
         android:orientation="vertical"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/btnSkipTestAct"
+        app:layout_constraintBottom_toTopOf="@+id/btnNextTestAct"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -500,15 +491,15 @@
 
     <LinearLayout
         android:id="@+id/llPrincipeTestAct"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="180dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="180dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/btnSkipTestAct"
+        android:orientation="vertical"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/btnNextTestAct"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
